hphp/hack/test/typecheck/reactive/rx_of_scope1.php.exp
File "rx_of_scope1.php", line 4, characters 3-13:
<<__RxOfScope>> attribute is only allowed on lambdas. (Naming[2090])
