hphp/hack/test/typecheck/reactive/rx_of_scope1.php
<?hh

// ERROR
<<__RxOfScope>>
function f(): void {
}
